Alteração de nome para iniciar outros testes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-vite-test",
+  "name": "react-vite-github-example",
   "private": true,
   "version": "0.0.1",
   "type": "module",
